Refactoring cobalt